cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_16.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:85: error: DEAD_STORE
  The value written to &tin0 (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:85:5: Write of unused value
83.           l2n(xor1, iv);
84.       }
85.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
          ^
86.       tin[0] = tin[1] = 0;
87.   }
